@@ -1,3 +1,5 @@
+2012-06-15 Federico Nova <nova@physics.utexas.edu>
+        * added features to ntupler
 2012-06-13 Federico Nova <nova@physics.utexas.edu>
         * calo hits have type "Nemo3 or SuperNEMO"
 	* intersection of vertex with circular foil
